--- a/estilos.css
+++ b/estilos.css
@@ -17,12 +17,13 @@ header{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
 }
 .contenedor-imagen{
     display: flex;
     aspect-ratio: 1/1;
-    width: 350px;
-    height: 250px;
+    width: 100%;
+    height: 250%;
     overflow: hidden;
 }
 img{
@@ -34,13 +35,14 @@ img{
 }
 .contenedor-h1{
     display: flex;
-    width: 250px;
+    width: 100%;
+    height: 300px
     flex-direction: column;
     margin: 5%;
 }
 h1{
     font-family: "Bebas Neue", sans-serif;
-    font-size: 40px;
+    font-size: 50px;
     display: flex;
     color: white;
     padding: 0;
