--- a/estilos.css
+++ b/estilos.css
@@ -35,14 +35,13 @@ img{
 }
 .contenedor-h1{
     display: flex;
-    width: 100%;
-    height: 300px
+    width: 250px;
     flex-direction: column;
     margin: 5%;
 }
 h1{
     font-family: "Bebas Neue", sans-serif;
-    font-size: 50px;
+    font-size: 65px;
     display: flex;
     color: white;
     padding: 0;
@@ -94,9 +93,8 @@ a{
     height: 30px;
     object-fit: contain;
 }
-
 @font-face {
   font-family: "Lora";
   src: url("fonts/Lora-VariableFont_wght.ttf") format("truetype");
-  src: url("fonts/BebasNeue-Regular.ttf") format("truetype");
+  src: url("fonts/BebasNeue-Regular.ttf");
 }
